--- a/.github/workflows/integracao-continua.yml
+++ b/.github/workflows/integracao-continua.yml
@@ -27,6 +27,6 @@ jobs:
       run: docker-compose up -d
 
     - name: Executa testes unitarios
-      run: nvm -B verify
+      run: mvn -B verify
 
       
