--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>API Rest da aplicação Voll.med</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>leolive1506</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
