Change image name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,7 @@ jobs:
         echo "$PRIVATE_KEY" > deploy_key.pem
         chmod 600 deploy_key.pem
 
-        images=$(docker images)
-        echo $images
-        docker save -o vollmed-api.tar vollmed-api_api
+        docker save -o vollmed-api.tar vollmed-api-java_api
 
         scp -o StrickHostKeyCheck=no -i deploy_key.pem vollmed-api.tar $USER@$HOST:/home/ubuntu/
         scp -o StrickHostKeyCheck=no -i deploy_key.pem init.sql $USER@$HOST:/home/ubuntu/
