--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,9 @@ jobs:
 
         docker save -o vollmed-api.tar vollmed-api-java_api
 
-        scp -o StrickHostKeyCheck=no -i deploy_key.pem vollmed-api.tar $USER@$HOST:/home/ubuntu/
-        scp -o StrickHostKeyCheck=no -i deploy_key.pem init.sql $USER@$HOST:/home/ubuntu/
-        scp -o StrickHostKeyCheck=no -i deploy_key.pem docker-compose-prod.yaml $USER@$HOST:/home/ubuntu/
-        scp -o StrickHostKeyCheck=no -i deploy_key.pem script-deploy.sh $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy_key.pem vollmed-api.tar $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy_key.pem init.sql $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy_key.pem docker-compose-prod.yaml $USER@$HOST:/home/ubuntu/
+        scp -o StrictHostKeyChecking=no -i deploy_key.pem script-deploy.sh $USER@$HOST:/home/ubuntu/
 
         ssh -i deploy_key.pem $USER@$HOST "chmod +x script-deploy.sh && ./script-deploy.sh"
